--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 注册用户
-	<form th:action="@{/users/addUser}" method="post">
+	<form th:action="@{/user/register}" method="post">
 		用户姓名：<input type="text" name="name"/><br/>
 		用户密码：<input type="text" name="password"/><br/>
 		<input type="submit" value="确定"/><br/>
