--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
 <body>
 登录用户
 	<form th:action="@{/user/loginUser}" method="post">
-		用户姓名：<input type="text" name="name"/><br/>
-		用户密码：<input type="text" name="password"/><br/>
+		用户姓名：<input type="text" name="name" required/><br/>
+		用户密码：<input type="text" name="password" required/><br/>
 		<input type="submit" value="登录"/><a th:href="@{/user/register}">注册</a><br/>
 	</form>
 </body>
